# Final-Year-Project

./: .gitIgnore  README.md  package-lock.json  package.json
admin/: index.html  package-lock.json  package.json
admin/src/: App.jsx  main.jsx
admin/src/assets/: index.js
admin/src/components/: AddAdmin.jsx  AddCity.jsx  AddCollege.jsx  AddHostel.jsx  AddMess.jsx  AddPg.jsx  AdminLogin.jsx  AdminManage.jsx  Navbar.jsx  NewAdmin.jsx  PageNotFound.jsx  Sidebar.jsx
admin/src/contexts/: ContextProvider.jsx
admin/src/pages/: City.jsx  College.jsx  CollegeDetails.jsx  Dashboard.jsx  Home.jsx  Hostel.jsx  Mess.jsx  OwnerDetails.jsx  OwnerList.jsx  Pg.jsx
backend/: package-lock.json  package.json  server.js
backend/config/: mongodb.js  swagger.js
backend/controller/: adminController.js  cityController.js  collegeController.js  contributeController.js  hostelController.js  messController.js  ownerController.js  pgController.js  reviewController.js  stateController.js
backend/middleware/: authAdmin.js  authSuper.js  cityMulter.js
backend/models/: adminModel.js  cityModel.js  collegeModel.js  contributeModel.js  hostelModel.js  messModel.js  ownerModel.js  pgModel.js  reviewModel.js  stateModel.js
backend/router/: adminRoute.js  cityRoute.js  collegeRoute.js  contributeRoute.js  hostelRoute.js  messRoute.js  ownerRoute.js  pgRoute.js  reviewRoute.js  stateRoute.js
backend/utils/: generateToken.js
bot/: main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/assets/: index.js
(+67 files in other folders)
