[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.3.23",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.57.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mongodb>=0.10.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "pymongo>=4.16.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
]
